--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   hugeicons: ^0.0.7
   icons_plus: ^5.0.0
   image_picker: ^1.1.2
+  intl: ^0.20.2
+  percent_indicator: ^4.2.4
   provider: ^6.1.2
   shared_preferences: ^2.5.2
 
