--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  http: ^1.3.0
   hugeicons: ^0.0.7
   icons_plus: ^5.0.0
   image_picker: ^1.1.2
   intl: ^0.20.2
   percent_indicator: ^4.2.4
   provider: ^6.1.2
+  razorpay_flutter: ^1.4.0
   shared_preferences: ^2.5.2
 
 dev_dependencies:
