--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_size_text: ^3.0.0
   cloud_firestore: ^5.6.3
   cloud_functions: ^5.3.2
   crypto: ^3.0.6
@@ -46,7 +47,7 @@ dependencies:
   intl: ^0.20.2
   percent_indicator: ^4.2.4
   provider: ^6.1.2
-  razorpay_flutter: ^1.4.0
+  razorpay_flutter: 1.4.0
   shared_preferences: ^2.5.2
 
 dev_dependencies:
