--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_storage: ^12.4.2
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
   http: ^1.3.0
@@ -54,6 +55,14 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/applogo.png"  # Path to your logo
+  # adaptive_icon_background: "#ffffff"  # Background color for Android Adaptive Icons
+  # adaptive_icon_foreground: "assets/app_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
